# aces

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  STATUS.md
crates/agent-protocol/: Cargo.toml
crates/agent-protocol/src/: errors.rs  lib.rs  types.rs
crates/agent-protocol/src/interfaces/: context_io.rs  invocation.rs  lifecycle.rs  mod.rs  observability.rs  signal_event.rs
crates/agent-protocol/tests/: integration_test.rs
crates/agent-registry/: Cargo.toml
crates/agent-registry/src/: entry.rs  error.rs  lib.rs  memory.rs  memory_tests_fixed.rs  registry.rs
crates/audit-log/: Cargo.toml
crates/audit-log/src/: lib.rs  memory.rs  wal.rs
crates/kernel-api/: Cargo.toml
crates/kernel-api/src/: builder.rs  lib.rs  mock.rs  syscall.rs
crates/kernel-core/: Cargo.toml
crates/kernel-core/src/: config.rs  dispatch.rs  error.rs  lib.rs
crates/permission-engine/: Cargo.toml
crates/permission-engine/src/: evaluator.rs  lib.rs  policy.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: config.rs  error.rs  lib.rs  priority.rs  scheduler.rs  token_bucket.rs
docs/: 2026-03-26-agent-kernel-strategy.md  2026-03-26-internal-ops-agent-governance-implementation-plan.md  2026-03-26-internal-ops-agent-governance-mvp.md  2026-03-26-internal-ops-agent-governance-prd.md  2026-03-26-internal-ops-agent-governance-technical-design-plan.md  2026-03-26-internal-ops-agent-governance-technical-roadmap.md
docs/architecture/: 2026-03-25-kernel-protocol-architecture.md  2026-03-25-kernel-protocol-implementation-plan.md  IMPLEMENTATION-GUIDE.md  README.md
docs/architecture/decisions/: ADR-001-single-interception-point.md  ADR-002-capability-intersection.md  ADR-003-synchronous-audit-write.md  ADR-004-protocol-kernel-separation.md  ADR-005-sandbox-isolation-strategy.md  ADR-006-scheduling-policy.md  README.md
docs/architecture/diagrams/: kernel-protocol-a2a.mmd  kernel-protocol-context-scopes.mmd  kernel-protocol-error-flow.mmd  kernel-protocol-invoke-sequence.mmd  kernel-protocol-main.mmd
docs/superpowers/plans/: 2025-03-27-agent-protocol-crate.md
protocol-spec/: overview.md
