[workspace]
members = [
    "crates/agent-protocol",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nicholas"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xnicholas/aces"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"
