[package]
name = "agent-registry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Agent Registry - Agent lifecycle management and lookup for Agent Kernel"
repository = "https://github.com/0xnicholas/aces"
readme = "../../README.md"

[dependencies]
agent-protocol = { path = "../agent-protocol" }
tokio = { version = "1.35", features = ["sync", "time"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
serde = { workspace = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1.0"
