[package]
name = "audit-log"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Audit Log - WAL with SHA-256 integrity chain for Agent Kernel"
repository = "https://github.com/0xnicholas/aces"
readme = "../../README.md"

[dependencies]
agent-protocol = { path = "../agent-protocol" }
serde = { workspace = true }
serde_json = "1.0"
uuid = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
crc32fast = "1.3"
tokio = { version = "1.35", features = ["sync", "fs", "io-util"] }
async-trait = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3.10"
