[package]
name = "kernel-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Kernel Core - Critical dispatch path and subsystem integration"
repository = "https://github.com/0xnicholas/aces"
readme = "../../README.md"

[dependencies]
agent-protocol = { path = "../agent-protocol" }
kernel-api = { path = "../kernel-api" }
audit-log = { path = "../audit-log" }
permission-engine = { path = "../permission-engine" }
scheduler = { path = "../scheduler" }
agent-registry = { path = "../agent-registry" }
async-trait = { workspace = true }
tokio = { version = "1.35", features = ["sync", "time", "rt"] }
thiserror = { workspace = true }
tracing = "0.1"
uuid = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1.0"
